--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
